--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,11 @@
     "128": "icon128x128.png"
   },
   "browser_action": {
-    "default_icon": "icon128x128.png",
     "default_popup": "popup.html",
     "default_title": "Let's Pokus"
   },
   "background":{
-    "scripts": ["popup.js"],
+    "scripts": ["background.js"],
     "persistent": true
   },
   "permissions": [
@@ -25,7 +24,7 @@
     "webRequest",
     "webRequestBlocking",
     "tabs",
-    "unlimitedStorage",
+    "storage",
     "<all_urls>"
   ]
 }
