--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,13 @@
     "scripts": ["background.js"],
     "persistent": true
   },
+  "content_scripts": [
+    {
+    "matches":["<all_urls>"],
+    "js": ["content.js"],
+    "all_frames": true
+    }
+  ],
   "permissions": [
     "activeTab",
     "alarms",
