--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
     {
     "matches":["<all_urls>"],
     "js": ["content.js"],
+    "run_at": "document_start",
     "all_frames": true
     }
   ],
