improved block page appearance, small changes to onbeforerequest listener

--- a/manifest.json
+++ b/manifest.json
@@ -25,10 +25,12 @@
     "activeTab",
     "contextMenus",
     "alarms",
+    "webNavigation",
     "webRequest",
     "webRequestBlocking",
     "tabs",
     "storage",
-    "<all_urls>"
+    "<all_urls>",
+    "http://localhost/*"
   ]
 }
