--- a/manifest.json
+++ b/manifest.json
@@ -19,18 +19,8 @@
     "persistent": true
   },
   "web_accessible_resources": [
-    "inject.css"
+    "redirect.html"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": ["js/content.js"],
-      "run_at": "document_start"
-    }
-  ],
-  "web_accessible_resources": ["inject.css"],
   "permissions": [
     "activeTab",
     "contextMenus",
