--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
 
   "name": "Pokus",
   "description": "Website blocking extension",
-  "version": "2.0.1",
+  "version": "2.1.1",
   "author": "Sinokaba",
   "icons":{
     "16": "img/pokusIcon16.png",
     "48": "img/pokusIcon48.png",
-    "128": "img/pokusIcon.png"
+    "128": "img/pokusIcon128.png"
   },
   "browser_action": {
     "default_popup": "popup.html",
